Core/objects/TrailheadEntityUpdateEvent__e/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>External Id</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>