Core/objects/TrailheadEntityUpdateEvent__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>New value of trailheadapp__Type__c on trailheadapp__Badge__c.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>