Core/objects/TrailheadEntityUpdateEvent__e/fields/UpdatedFields__c.field-meta.xml
<CustomField>
    <fullName>UpdatedFields__c</fullName>
    <description>List of fields that were changed on trailheadapp__Badge__c or trailheadapp__Trail__c.</description>
    <label>Updated Fields</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>